tests/bad/bad_arg_type_direct.s
.name "coucou"
.comment "coucou"

label:
    ld, %1, %1
